차한규: 로그인까지 구현완료

--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -31,6 +31,14 @@
         <small class="text-muted">(status = new)</small>
       </div>
     </div>
+    <div class="col-md-4">
+      <div class="card p-3 shadow-sm text-center">
+        <h6 class="mb-1">DB status</h6>
+        <div class="small">Videos: <span id="kpi-db-videos">—</span></div>
+        <div class="small">Detections: <span id="kpi-db-detections">—</span></div>
+        <small class="text-muted">(live counts from backend)</small>
+      </div>
+    </div>
   </div>
 
   <!-- Trend chart -->
