--- a/index.html
+++ b/index.html
@@ -69,27 +69,9 @@ As more data accumulates, the AI model continues to learn and provides increasin
           <div class="card shadow-sm">
             <div class="card-body">
               <h5 class="card-title">Quick Actions</h5>
-              <p class="text-muted">Quick record add, import/export, and an SQL-like console</p>
-              <div class="d-grid gap-2 mb-3">
+              <p class="text-muted">빠르게 신규 레코드를 추가합니다.</p>
+              <div class="d-grid gap-2">
                 <button id="btn-add" class="btn btn-primary">Add record</button>
-                <button id="btn-export" class="btn btn-outline-secondary">Export (JSON)</button>
-                <input id="file-input" type="file" accept="application/json" class="d-none" />
-                <button id="btn-import" class="btn btn-outline-secondary">Import (JSON)</button>
-              </div>
-
-              <div class="mt-3">
-                <label class="form-label">SQL Console</label>
-                <textarea id="sql-input" class="form-control mb-2" rows="6" placeholder="e.g.: SELECT * WHERE risk_level=high"></textarea>
-                <div class="d-flex gap-2">
-                  <button id="btn-run-sql" class="btn btn-success flex-grow-1">Run</button>
-                  <button id="btn-clear-sql" class="btn btn-outline-danger">Clear</button>
-                </div>
-                <small class="text-muted mt-2 d-block">Supported commands: SELECT, INSERT, UPDATE, DELETE (simple WHERE key=value supported)</small>
-              </div>
-
-              <div class="mt-3">
-                <h6>Last result</h6>
-                <pre id="sql-result" class="small bg-dark text-light p-2 rounded" style="height:120px;overflow:auto">(results will appear here)</pre>
               </div>
 
             </div>
